# RESIGNTRACKBACKEND

./: .gitignore  db_inspect.py  db_inspect_users.py  pyproject.toml  requirements.txt  set_passwords.py
api/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_appuser_address_appuser_designation_appuser_dob_and_more.py  0003_appuser_raw_password.py  0003_appuser_raw_password_auditlog_action_type_and_more.py  0004_rename_action_type_auditlog_action_and_more.py  0005_asset.py  0005_assetauditlog_resignation_meeting_schedule_and_more.py  0005_rename_action_type_auditlog_action_and_more.py  0006_alter_resignation_status.py  0006_asset_assetauditlog_and_more.py  0006_exitinterview.py  0007_alter_resignation_status.py  0007_alter_resignation_status_meeting.py  0007_rename_action_type_auditlog_action_and_more.py  0008_alter_resignation_status.py  0008_rename_action_type_auditlog_action_and_more.py  0009_companymasteremployee_hrmanagementstaffprofile_and_more.py  0010_joiningdateauditlog_syncqueue.py  0011_merge_20260706_1859.py  0012_announcement.py  0013_remove_appuser_raw_password.py
api/serializers/: __init__.py  admin.py  asset.py  assets.py  checklist.py  common.py  employee.py  hr.py  meeting.py  notification.py  reschedule.py
api/urls/: __init__.py  admin.py  common.py  employee.py  hr.py
api/views/: __init__.py  admin.py  analytics_endpoints.py  analytics_views.py  asset.py  assets.py  audit_views.py  common.py  employee.py  employee_detail.py  exit_interviews.py  hr.py  notification.py  (+6 more)
core/: settings.py
(+1 files in other folders)
