[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.2.1",
    "python-dotenv>=1.0.1",
    "djangorestframework-simplejwt>=5.4.0",
    "gunicorn>=26.0.0",
]
